--- a/app/templates/publish.html
+++ b/app/templates/publish.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}404 Page not found{% endblock %}
+{% block title %}Publish{% endblock %}
 
 {% block content %}
 <div class="row">
