--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -1,3 +1,18 @@
+.u-cl {
+  content: "";
+  display: table;
+  clear: left; }
+
+.u-cr {
+  content: "";
+  display: table;
+  clear: right; }
+
+.button-error {
+  background-color: red;
+  color: white;
+}
+
 .page-nav {
   min-height: 60px;
   text-align: center;
@@ -26,6 +41,18 @@
   color: black;
 }
 
+.table-list > ul > li > a {
+  font-size: 1rem;
+  margin-right: 15px;
+}
+
+h1 { font-size: 2.4rem; line-height: 1.2;  letter-spacing: -.1rem;}
+h2 { font-size: 2.1rem; line-height: 1.25; letter-spacing: -.1rem; }
+h3 { font-size: 1.8rem; line-height: 1.3;  letter-spacing: -.1rem; }
+h4 { font-size: 1.5rem; line-height: 1.35; letter-spacing: -.08rem; }
+h5 { font-size: 1.2rem; line-height: 1.5;  letter-spacing: -.05rem; }
+h6 { font-size: 1.0rem; line-height: 1.6;  letter-spacing: 0; }
+
 .errors {
   color: red;
 }
@@ -36,6 +63,10 @@
 
 .error-color {
   color: red !important;
+}
+
+.select-menu {
+  min-height: 200px;
 }
 
 .active-color {
