--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -6,7 +6,7 @@
   {{ super() }}
   <nav class="page-nav">
     <ul>
-      <li><a href="/admin/user">user</a></li>
+      <li><a href="/admin/table">tables</a></li>
       <li><a href="/admin/search">search</a></li>
       <li><a href="/admin/publish">publish</a></li>
     </ul>
