--- a/app/templates/book/index.html
+++ b/app/templates/book/index.html
@@ -5,21 +5,29 @@
 {% block content %}
 <div class="row">
   <div class="five columns">
-    <a class="button button-primary u-pull-right" href="{{ url_for('edit_book', book_id=book.book_id)}}">Edit Book</a>
-    <h1>{{ book.title }}</h1>
-    <dl class="inline-dl">
-      <dt>Author</dt>
-      <dd>{{ book.username }}</dd>
-      <dt>Genres</dt>
-      <dd>{{ book.genres }}</dd>
-      <dt>Created</dt>
-      <dd>{{ book.create_time }}</dd>
-      <dt>Rating</dt>
-      <dd>{{ 1 }}</dd>
-      <dt>Views</dt>
-      <dd>{{ 1 }}</dd>
-    </dl>
-    <p>{{ book.summary }}</p>
+    <div>
+      <a class="button button-primary u-pull-right" href="{{ url_for('edit_book', book_id=book.book_id)}}">Edit Book</a>
+      <h1>{{ book.title }}</h1>
+      <dl class="inline-dl">
+        <dt>Author</dt>
+        <dd>{{ book.username }}</dd>
+        <dt>Genres</dt>
+        <dd>{{ book.genres }}</dd>
+        <dt>Created</dt>
+        <dd>{{ book.create_time }}</dd>
+        <dt>Rating</dt>
+        <dd>{{ 1 }}</dd>
+        <dt>Views</dt>
+        <dd>{{ 1 }}</dd>
+      </dl>
+      <p>{{ book.summary }}</p>
+    </div>
+    <div>
+      <a class="button button-primary u-pull-right" href="{{ url_for('create_book_comment', book_id=book.book_id)}}">Add Comment</a>
+      <h2>Comments</h2>
+        {% include 'comment/_comments.html' %}
+      </div>
+    </div>
   </div>
   <div class="seven columns">
       <a class="button button-primary u-pull-right" href="{{ url_for('create_chapter', book_id=book.book_id)}}">New Chapter</a>
