--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -7,7 +7,7 @@
   <nav class="page-nav">
     <ul>
       <li><a href="/admin/table">tables</a></li>
-      <li><a href="/admin/publish">publish</a></li>
+      <li><a href="/admin/report">report</a></li>
     </ul>
   </nav>
 {% endblock %}
