--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,61 @@
 {% extends "base.html" %}
 
+{% macro make_book_item(book) -%}
+  <div class="four columns">
+    <div class="item-container">
+      <dl class="inline-dl">
+        <dt>Title</dt>
+        <dd>{{ book.title }}</dd>
+        <dt>Author</dt>
+        <dd>{{ book.author }}</dd>
+        <dt>Genres</dt>
+        <dd>{{ book.genres }}</dd>
+        <dt>Chapters</dt>
+        <dd>{{ book.chapters }}</dd>
+        <dt>Views</dt>
+        <dd>{{ book.views }}</dd>
+        <dt>Rating</dt>
+        <dd>{{ book.rating }}</dd>
+        <dt>Votes</dt>
+        <dd>{{ book.votes }}</dd>
+        <dt>Popularity</dt>
+        <dd>{{ book.popularity }}</dd>
+        <dt>Comments</dt>
+        <dd>{{ book.comments }}</dd>
+      </dl>
+    </div>
+  </div>
+{%- endmacro %}
+
 {% block title %}Novel Cat{% endblock %}
 
 {% block content %}
 <div class="row">
-  home page
+  {{ make_book_item(books[0]) }}
+  {{ make_book_item(books[1]) }}
+  {{ make_book_item(books[2]) }}
 </div>
+<div class="row">
+  {{ make_book_item(books[0]) }}
+  {{ make_book_item(books[1]) }}
+  {{ make_book_item(books[2]) }}
+</div>
+<div class="row">
+  <div class="four columns">
+    <div class="item-container">
+      a
+    </div>
+  </div>
+  <div class="four columns">
+    <div class="item-container">
+      b
+    </div>
+  </div>
+  <div class="four columns">
+    <div class="item-container">
+      c
+    </div>
+  </div>
+</div>
+{% include '_db_table.html' %}
 {% endblock %}
