--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -12,7 +12,7 @@
     <img alt="profile image" src="{{ url_for('static', filename='profile-icon.png') }}" width="200px" height="200px">
     {% endif %}
   </div>
-  <div class="six columns">
+  <div class="four columns">
     <dl class="inline-dl">
       <dt>Username</dt>
       <dd>{{ account.username }}</dd>
