--- a/app/templates/book/_chapter_table.html
+++ b/app/templates/book/_chapter_table.html
@@ -5,7 +5,9 @@
       <th>Title</th>
       <th>Status</th>
       <th>Created</th>
-      <th>Edit</th>
+      {% if current_user.user_id == book.author_id %}
+        <th>Edit</th>
+      {% endif %}
     </tr>
   </thead>
   <tbody>
@@ -15,7 +17,9 @@
         <td><a href="{{ url_for('view_chapter', book_id=book.book_id, chapter_id=chapter.chapter_id)}}">{{ chapter.title }}</a></td>
         <td>{{ chapter.status }}</td>
         <td>{{ chapter.create_time }}</td>
-        <td><a class="button" href="{{ url_for('edit_chapter', book_id=book.book_id, chapter_id=chapter.chapter_id)}}">Edit</a></td>
+        {% if current_user.user_id == book.author_id %}
+          <td><a class="button" href="{{ url_for('edit_chapter', book_id=book.book_id, chapter_id=chapter.chapter_id)}}">Edit</a></td>
+        {% endif %}
       </tr>
     {% else %}
       <tr>
